--- a/httpd.conf
+++ b/httpd.conf
@@ -70,6 +70,13 @@ ServerName www.rpi.com
 	SSLVerifyDepth 1
 	SSLCACertificateFile /etc/apache2/ssl/ca.cer
 
+    <Location /video_proxy_001>
+        ProxyPass http://192.168.1.4:8081/
+        ProxyPassReverse http://192.168.1.4:8081/
+        Order allow,deny
+        Allow from all
+    </Location>
+
 </VirtualHost>
 
 
@@ -131,7 +138,7 @@ LoadModule filter_module modules/mod_filter.so
 #LoadModule charset_lite_module modules/mod_charset_lite.so
 #LoadModule deflate_module modules/mod_deflate.so
 #LoadModule xml2enc_module modules/mod_xml2enc.so
-#LoadModule proxy_html_module modules/mod_proxy_html.so
+LoadModule proxy_html_module modules/mod_proxy_html.so
 LoadModule mime_module modules/mod_mime.so
 #LoadModule ldap_module modules/mod_ldap.so
 LoadModule log_config_module modules/mod_log_config.so
@@ -150,10 +157,10 @@ LoadModule headers_module modules/mod_headers.so
 LoadModule setenvif_module modules/mod_setenvif.so
 LoadModule version_module modules/mod_version.so
 #LoadModule remoteip_module modules/mod_remoteip.so
-#LoadModule proxy_module modules/mod_proxy.so
+LoadModule proxy_module modules/mod_proxy.so
 #LoadModule proxy_connect_module modules/mod_proxy_connect.so
 #LoadModule proxy_ftp_module modules/mod_proxy_ftp.so
-#LoadModule proxy_http_module modules/mod_proxy_http.so
+LoadModule proxy_http_module modules/mod_proxy_http.so
 #LoadModule proxy_fcgi_module modules/mod_proxy_fcgi.so
 #LoadModule proxy_scgi_module modules/mod_proxy_scgi.so
 #LoadModule proxy_fdpass_module modules/mod_proxy_fdpass.so
